# favors

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
apps/extension/: manifest.json
apps/extension/src/: background.js
apps/server/: package.json
apps/server/src/: db.ts  extract-worker.mjs  extract.ts  index.ts  markdown.ts  paths.ts  types.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  styles.css  types.ts
scripts/: install-systemd-user.sh  install.ps1  install.sh  package-release.sh  uninstall-systemd-user.sh
