[package]
name = "favorsd"
version = "0.1.0"
edition = "2021"

[dependencies]
html-escape = "0.2.13"
percent-encoding = "2.3.1"
readability-rs = "0.5.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
scraper = "0.27.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8"
time = { version = "0.3.37", features = ["formatting"] }
ureq = "3.3.0"
url = "2.5.4"
